separates exps from hops adds mem policy in hbi